WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20941
incorrect height calculation inside nested positioned elements
https://bugs.webkit.org/show_bug.cgi?id=20941
Summary
incorrect height calculation inside nested positioned elements
Max Barel
Reported
2008-09-19 10:05:33 PDT
When - a div is absolute and its height is not specified but must be computed from top and bottom, - a nested absolute div has its size computed from parent (correctly computed) - a nested image inside the previous, with relative height got an incorrect size The image size is calculated relative to body rather than closest positioned parent. Strange enough, calculation of the width is correct. See test case in attachment.
Attachments
test case html
(975 bytes, text/html)
2008-09-19 10:07 PDT
,
Max Barel
no flags
Details
Patch to fix bug
(176.65 KB, patch)
2008-09-19 13:47 PDT
,
Dave Hyatt
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Max Barel
Comment 1
2008-09-19 10:07:28 PDT
Created
attachment 23571
[details]
test case html
Dave Hyatt
Comment 2
2008-09-19 13:12:47 PDT
I see the problem. Taking.
Dave Hyatt
Comment 3
2008-09-19 13:47:33 PDT
Created
attachment 23581
[details]
Patch to fix bug
Dave Hyatt
Comment 4
2008-09-19 13:55:18 PDT
Fixed in
r36672
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug