WebCore:

2008-09-19  David Hyatt  <hyatt@apple.com>

        Reviewed by Sam Weinig

        https://bugs.webkit.org/show_bug.cgi?id=20941

        Incorrect height calculation for replaced element inside nested
        positioned elements (where the inner has a percentage height and
        the outer implicitly has a fixed height because of explicit top/bottom
        values).

        Added fast/block/positioning/replaced-inside-top-bottom.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::availableHeightUsing):

LayoutTests:

2008-09-19  David Hyatt  <hyatt@apple.com>

        Fix for bug 20941.

        Reviewed by Sam Weinig

        * fast/block/positioning/replaced-inside-fixed-top-bottom.html: Added.
        * platform/mac/fast/block/positioning/replaced-inside-fixed-top-bottom-expected.checksum: Added.
        * platform/mac/fast/block/positioning/replaced-inside-fixed-top-bottom-expected.png: Added.
        * platform/mac/fast/block/positioning/replaced-inside-fixed-top-bottom-expected.txt: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@36672 bbb929c8-8fbe-4397-9dbb-9b2b20218538